--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,11 @@
     </properties>
 
     <dependencies>
-        <!--<dependency>-->
-            <!--<groupId>net.fxft</groupId>-->
-            <!--<artifactId>fxft-cloud</artifactId>-->
-            <!--<version>1.2.68_RELEASE</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>net.fxft</groupId>
+            <artifactId>fxft-cloud</artifactId>
+            <version>1.2.68_RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
