--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+        <dependency>
             <groupId>net.fxft</groupId>
             <artifactId>fxft-cloud</artifactId>
             <version>1.2.68_RELEASE</version>
