--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,11 @@ pagehelper.support-methods-arguments=true
 #spring.datasource.username=root
 #spring.datasource.password=123321
 
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://172.16.8.118:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-spring.datasource.username=ascs
-spring.datasource.password=fxft@835213
+spring.datasource.url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+spring.datasource.username=root
+spring.datasource.password=123321
 
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
