--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,16 +10,16 @@ pagehelper.support-methods-arguments=true
 
 
 #这里是因为配置表在测试环境
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#spring.datasource.username=root
-#spring.datasource.password=123321
-
-
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=123321
+
+
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://218.203.108.32:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#spring.datasource.username=readonly
+#spring.datasource.password=fxft@8352137cBZFQY
 
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
