--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,18 @@
-server.port=8088
+server.port=8089
 mybatis.type-aliases-package=com.hzz.entity
 mybatis.mapper-locations= classpath:mapper/*.xml
 
-#分页插件
+#\uFFFD\uFFFD\u04B3\uFFFD\uFFFD\uFFFD
 pagehelper.helper-dialect=mysql
 pagehelper.params=count=countSql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 
 
-#这里是因为配置表在测试环境
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-spring.datasource.username=root
-spring.datasource.password=123321
+spring.datasource.url=jdbc:mysql://172.16.8.96:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&useSSL=false
+spring.datasource.username=ascs
+spring.datasource.password=96bcnJ6ifCz7NBHpjhB1ZA45
 
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
@@ -35,21 +34,21 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 
 fxft.jdbc.debug=false
 
-# Redis服务器地址测试环境
-fxft.redis.host=r-bp143d2ed3392654.redis.rds.aliyuncs.com
-# Redis服务器连接端口
+# Redis\u670D\u52A1\u5668\u5730\u5740
+fxft.redis.host=172.16.8.96
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
 fxft.redis.port=6379
-# Redis服务器连接密码（默认为空）
-fxft.redis.password=1jfrH8XLvx4wnbGNpY5Rr7SM
-# 连接池最大连接数（使用负值表示没有限制）
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+fxft.redis.password=46qUdp1mH1AM8RNS3TVsfNkQ
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 fxft.redis.max-total=200
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 fxft.redis.max-wait=-1
-# 连接池中的最大空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
 fxft.redis.max-idle=200
-# 连接池中的最小空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 fxft.redis.min-idle=0
-# 连接超时时间（毫秒）
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 fxft.redis.timeout=0
-# 连接的库序号
-fxft.redis.select=0
+# \u8FDE\u63A5\u7684\u5E93\u5E8F\u53F7
+fxft.redis.select=1
