--- a/src/main/resources/DataSource.properties
+++ b/src/main/resources/DataSource.properties
@@ -5,8 +5,12 @@
 #driverClassName=com.mysql.jdbc.Driver
 #username=huzz
 #password=kb5NS1EHsc7wRtjqP965zfXS#
-url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#url=jdbc:mysql://47.99.89.164:3306/subiaodb?autoReconnect=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#driverClassName=com.mysql.jdbc.Driver
+#username=root
+#password=123321
+
+url=jdbc:mysql://127.0.0.1:3306/jfinal_demo?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 driverClassName=com.mysql.jdbc.Driver
 username=root
-password=123321
-
+password=
