--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,11 @@
             <artifactId>java-sizeof</artifactId>
             <version>0.0.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.hzz</groupId>
+            <artifactId>serialize</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
@@ -153,11 +157,11 @@
         </dependency>
 
 <!--        hzzdata注入-->
-        <dependency>
-            <groupId>com.hzz</groupId>
-            <artifactId>hzzcloud</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.hzz</groupId>-->
+<!--            <artifactId>hzzcloud</artifactId>-->
+<!--            <version>0.0.1-SNAPSHOT</version>-->
+<!--        </dependency>-->
 
 
 
